<resources>
    <string name="app_name">SpaceInvader</string>
    <string name="txt_newGame">New</string>
    <string name="txt_loadGame">Load</string>
    <string name="txt_scores">Scores</string>
    <string name="txt_exit">Exit</string>
    <string name="txt_return">Return</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_pause">Pause</string>
    <string name="txt_refresh">Refresh</string>
    <string name="txt_settings">Settings</string>
    <string name="return_to_main_menu">Return to Main Menu</string>
    <string name="save">Save</string>
    <string name="return_to_game">Return to Game</string>
    <string name="settings">Settings</string>
    <string name="score">0</string>
    <string name="player">Please insert a Username</string>
    <string name="save_score">Save score</string>
    <string name="_0">0</string>
    <string name="score_z">SCORE</string>
    <string name="tx_lose">You Lose</string>
    <string name="tx_win">You Win</string>
    <string name="color_scheme">Color Scheme</string>
    <string name="back">Back</string>
    <string name="save_settings">Save Settings</string>
    <string name="theme">Standard</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>