<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Game">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <Button
            android:id="@+id/bt_returnMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/return_to_main_menu" />

        <Button
            android:id="@+id/bt_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save" />

        <Button
            android:id="@+id/bt_toGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/return_to_game" />
    </LinearLayout>

</FrameLayout>