<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="24dp"
    android:background="@drawable/home_bg">

    <com.example.spaceinvader.EnemyDraw
        android:id="@+id/iv_home"
        android:layout_width="280dp"
        android:layout_height="210dp"
        android:rotationX="20"
        app:layout_constraintBottom_toTopOf="@id/bt_newGame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_newGame"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_shape"
        android:onClick="onClick"
        android:text="@string/txt_newGame"
        android:textColor="?colorButtonNormal"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@id/bt_scores"
        app:layout_constraintEnd_toStartOf="@id/bt_loadGame"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bt_loadGame"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_shape"
        android:onClick="onClick"
        android:text="@string/txt_loadGame"
        android:textColor="?colorButtonNormal"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@id/bt_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/bt_newGame" />

    <Button
        android:id="@+id/bt_scores"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_shape"
        android:onClick="onClick"
        android:text="@string/txt_scores"
        android:textColor="?colorButtonNormal"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@id/bt_exit"
        app:layout_constraintEnd_toStartOf="@id/bt_settings"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bt_settings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_shape"
        android:onClick="onClick"
        android:text="@string/txt_settings"
        android:textColor="?colorButtonNormal"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@id/bt_exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/bt_scores" />

    <Button
        android:id="@+id/bt_exit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/txt_exit"
        android:textColor="?colorButtonNormal"
        android:background="@drawable/button_shape"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/nem_tv"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/iv_home"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="nome e cognome"
        android:textColor="@color/white"
        />

</androidx.constraintlayout.widget.ConstraintLayout>

<!--

-->