<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_bg"
    android:padding="24dp"
    tools:context=".SettingActivity">


	<TextView
		android:id="@+id/textView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/color_scheme"
		android:textSize="24dp"
		android:textColor="@color/bt_pink"
		app:layout_constraintEnd_toStartOf="@id/spinner"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<Spinner
		android:id="@+id/spinner"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="24dp"
		android:minHeight="48dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@id/textView"
		app:layout_constraintTop_toTopOf="parent"
		android:entries="@array/color_array"/>

	<Button
		android:id="@+id/bt_Main"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/return_to_main_menu"
		android:background="@drawable/button_shape"
		android:textColor="@color/bt_pink"
		app:backgroundTint="@null"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toStartOf="@id/bt_Back"
		app:layout_constraintStart_toStartOf="parent"
		android:onClick="onClick"/>

	<Button
		android:id="@+id/bt_Back"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="24dp"
		android:background="@drawable/button_shape"
		android:text="@string/back"
		android:textColor="@color/bt_pink"
		app:backgroundTint="@null"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@id/bt_Main"
		android:onClick="onClick"/>

</androidx.constraintlayout.widget.ConstraintLayout>